--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-Django>=3.2,<4.0
-djangorestframework>=3.12,<4.0
+Django>=3.2.25
+djangorestframework 3.15.1
 python-dotenv==1.0.1
+requests == 2.32.3
